Enhance output with repository details
Added echo statements to display repository path and name.

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           echo "Ambiente: ${{ inputs.ambiente }}"
           echo "Mensaje: ${{ inputs.mensaje }}"
+          echo "repositorio path: ${{ github.repository }}"
+          echo "repositorio name: ${{ github.event.repository.name }}"
       
       - name: Proceso dummy
         run: |
